--- a/templates/game.html
+++ b/templates/game.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Waiting for players...</title>
-    </head>
 
-    <body>
-        
-    </body>
+<head>
+    <title>Waiting for players...</title>
+</head>
+
+<body>
+
+</body>
+
+<script src={{ url_for('static', filename='jquery.min.js' ) }}></script>
+<!-- Socket.IO for communication with the server -->
+<script src={{ url_for('static', filename='socket.io.min.js' ) }}></script>
+
 </html>
